# blob-metadata

./: .ammanrc.js  .gitignore  .prettierrc.js  .solitarc.js  README.md  package.json  rustfmt.toml
.crates/: .crates.toml  .crates2.json
program/: Anchor.toml  Cargo.toml
program/src/: constants.rs  errors.rs  lib.rs  state.rs  utils.rs
program/src/processor/: feed.rs  init_manager.rs  init_metadata.rs  lose_life.rs  mod.rs  update_as_authority.rs  update_nickname.rs
snapshots/setup_blobs/accounts/: 2LgFLgNEfqAjkWdwuRe9xhAuYo2M3NZDKAEjx11Amyhh.json  2WxKNyJ6KskHL1dcE8aA8NzmCpyt49jKjGEaNgEG4Cyx.json  2qXKn5sm6Nkt9Ad4NJMN6mJusWjxjsvsj59xtwDs1Qh9.json  3nfSrY4DmDUvC4jtBw4CWGdk3HJ4RpsT4kidguZ98d9d.json  4xLa9rmkJvVmReGoPBs6BCX2pgYingGRPKzkxxXiXGVq.json  5FyssPDhogSxAJr6onENvxf7arb1vtRFnWSupqTwRHUF.json  5XrLSxumyDeDbf7punAbDZJnKJ2u8YKTgHyaPZ7QhMxy.json  5sauqa57rDDiUZD52zQ9TXg1Jz9t7CesF9uUoMZBMn4b.json  7AG6oTSU4XhWuGpJT6pJeYv5Ds8MQYQ1aXCJ7JVHnHtz.json  7rBiTwWemitbm4GUdAf7xZKQFDADgfKCj1E9hj5UKGZP.json  8GayCovd4ejtxdw9wVZv1BkiCWJbPJqo9VddYn4fijk7.json  8tHwLUPqz6bf3doGwRheYPSruEyEs93PrFQgzT17Mxbf.json  9WeeCABRAtBcChW6samLcgWC9FqFdrrMrwUsYR1BBUfe.json  9v2DoKWSY1FhANLZz9eBAwBQ1FuooFormtDyn5vQCqAe.json  AUk573BzXpYru1kHiFgZdWXXxeq3YFppk78QGGmrZkVE.json  AXDKdm1jCtsvDZSYw2C9NyKKn7Xf4JdkWw2jX8HM47j1.json  BabyBlob #0.json  BabyBlob #1.json  BabyBlob #2.json  BabyBlob #3.json  BabyBlob #4.json  BabyBlob #5.json  BabyBlob #6.json  BabyBlob #7.json  BabyBlob #8.json  BabyBlob #9.json  Blob Metadata Manager.json  BnZcbsqAtfQ6yJ3V56pwvHFgxhTxEYvjU9EkY4KnvJwL.json  (+24 more)
